--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 gpui = "0.2"
 gpui-component = "0.2"
 anyhow = "1.0"
+rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
