--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ gpui = "0.2"
 gpui-component = "0.2"
 anyhow = "1.0"
 rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
+
+global-hotkey = "0.7"
