--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ anyhow = "1.0"
 rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
 
 global-hotkey = "0.7"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
