--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 
 tokei = "12.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
+toml = { version = "0.9" }
